# dask_zarr_consecutive_timesteps_processing

./: README.md  pyproject.toml
notebooks/: first_attempt.ipynb
