[project]
name = "dask_zarr_processing"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Leif Denby", email = "lcd@dmi.dk"},
]
dependencies = [
    "zarr>=2.18.1",
    "dask[diagnostics]>=2024.5.0",
    "xarray>=2024.5.0",
    "ipykernel>=6.29.4",
    "matplotlib>=3.9.0",
    "pooch>=1.8.1",
    "netcdf4>=1.6.5",
    "scipy>=1.13.0",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
